Continuous development on the website

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "framer-motion": "^4.1.17",
     "next": "^10.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
