--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "framer-motion": "^4.1.17",
-    "next": "^10.0.6",
+    "i18next": "^21.3.2",
+    "next": "^11.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-i18next": "^11.12.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
