--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-i18next": "^11.12.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "typescript": "^4.1.3"
