--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "lint": "yarn run eslint . --ext ts,tsx",
+    "prepare": "husky install",
     "start": "next"
   },
   "dependencies": {
@@ -16,6 +18,19 @@
     "@emotion/babel-plugin": "^11.3.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.4.1",
     "typescript": "^4.1.3"
   }
 }
