--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@emotion/styled": "^11.1.5",
     "framer-motion": "^4.1.17",
     "i18next": "^21.3.2",
-    "next": "^11.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-i18next": "^11.12.0"
+    "next": "^12.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
