Fixes TypeScript issues and adds the tsc step to the pre-commit hook

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "lint": "eslint . --ext ts,tsx",
     "prepare": "husky install",
-    "start": "next dev --port 4000"
+    "start": "next dev --port 4000",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.1.5",
