--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@emotion/babel-plugin": "^11.3.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
