--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "framer-motion": "^5.0.0",
+    "framer-motion": "^5.0.1",
     "i18next": "^21.3.2",
-    "next": "^12.0.1",
+    "leaflet": "^1.7.1",
+    "next": "^12.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.13.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
     "@emotion/babel-plugin": "^11.3.0",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-leaflet": "^2.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
