--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,5 @@
+LAST_FM_API_URL=http://ws.audioscrobbler.com/2.0
+LAST_FM_API_KEY=a0926b03b0d72deadd18a76e7fd594ee
+LAST_FM_API_USER=andre_silva74
+
 NEXT_PUBLIC_STADIA_MAP_API_KEY=4073a40b-4434-4dad-87f7-a9725a39a875
