--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@upstash/redis": "^0.1.5",
     "axios": "^0.24.0",
-    "cookie": "^0.4.1",
     "framer-motion": "^5.3.3",
     "i18next": "^21.5.3",
     "leaflet": "^1.7.1",
-    "mongodb": "^4.2.0",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.14.3",
     "react-icons": "^4.3.1",
-    "react-query": "^3.33.5"
+    "react-query": "^3.33.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@emotion/babel-plugin": "^11.3.0",
-    "@types/cookie": "^0.4.1",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
