--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.6",
+    "@mui/material": "^5.2.7",
     "@upstash/redis": "^0.2.1",
     "axios": "^0.24.0",
     "framer-motion": "^5.5.5",
@@ -19,7 +19,7 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.2",
+    "react-i18next": "^11.15.3",
     "react-query": "^3.34.7",
     "throttle-debounce": "^3.0.1"
   },
@@ -27,12 +27,13 @@
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
     "@emotion/babel-plugin": "^11.7.2",
-    "@types/node": "^17.0.6",
+    "@next/bundle-analyzer": "^12.0.7",
+    "@types/node": "^17.0.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/throttle-debounce": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
     "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
