--- a/package.json
+++ b/package.json
@@ -7,40 +7,40 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.8",
-    "@upstash/redis": "^0.2.1",
-    "axios": "^0.24.0",
-    "framer-motion": "^5.6.0",
-    "i18next": "^21.6.6",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
+    "@upstash/redis": "^1.1.0-alpha.0",
+    "axios": "^0.26.1",
+    "framer-motion": "^6.2.8",
+    "i18next": "^21.6.14",
     "leaflet": "^1.7.1",
-    "next": "^12.0.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.3",
-    "react-query": "^3.34.8",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.2",
+    "react-query": "^3.34.19",
     "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.0.2",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@emotion/babel-plugin": "^11.7.2",
-    "@next/bundle-analyzer": "^12.0.8",
-    "@types/node": "^17.0.8",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@next/bundle-analyzer": "^12.1.4",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "@types/throttle-debounce": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-next": "^12.0.8",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.4",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
     "jsdom": "^19.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.3"
   },
   "packageManager": "yarn@3.1.1"
 }
