--- a/package.json
+++ b/package.json
@@ -7,35 +7,35 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.3",
-    "@upstash/redis": "^1.1.0-alpha.0",
-    "axios": "^0.26.1",
-    "framer-motion": "^6.2.8",
-    "i18next": "^21.6.14",
-    "leaflet": "^1.7.1",
-    "next": "^12.1.4",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
+    "@upstash/redis": "^1.3.1",
+    "axios": "^0.27.0",
+    "framer-motion": "^6.3.2",
+    "i18next": "^21.6.16",
+    "leaflet": "^1.8.0",
+    "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-i18next": "^11.16.2",
-    "react-query": "^3.34.19",
-    "throttle-debounce": "^3.0.1"
+    "react-i18next": "^11.16.7",
+    "react-query": "^3.38.0",
+    "throttle-debounce": "^4.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@emotion/babel-plugin": "^11.7.2",
-    "@next/bundle-analyzer": "^12.1.4",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "@types/throttle-debounce": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "eslint": "^8.12.0",
-    "eslint-config-next": "^12.1.4",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@next/bundle-analyzer": "^12.1.5",
+    "@types/node": "^17.0.27",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
+    "@types/throttle-debounce": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
     "jsdom": "^19.0.0",
