--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "lint": "eslint . --ext ts,tsx",
     "prepare": "husky install",
-    "start": "next dev --port 4000",
+    "dev": "next dev --port 4000",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
