--- a/package.json
+++ b/package.json
@@ -7,42 +7,43 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.3",
-    "@mui/material": "^5.8.3",
-    "@upstash/redis": "^1.6.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
+    "@upstash/redis": "^1.9.0",
     "axios": "^0.27.2",
-    "framer-motion": "^6.3.11",
-    "i18next": "^21.8.9",
+    "classnames": "^2.3.1",
+    "framer-motion": "^6.5.1",
+    "i18next": "^21.8.14",
     "leaflet": "^1.8.0",
-    "next": "^12.1.6",
-    "plaiceholder": "^2.3.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-i18next": "^11.17.1",
-    "react-query": "^3.39.1",
-    "sharp": "^0.30.6",
+    "next": "^12.2.2",
+    "plaiceholder": "^2.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.1",
+    "react-query": "^3.39.2",
+    "sharp": "^0.30.7",
     "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@emotion/babel-plugin": "^11.9.2",
-    "@next/bundle-analyzer": "^12.1.6",
+    "@next/bundle-analyzer": "^12.2.2",
     "@types/node": "^17.0.41",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/throttle-debounce": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "eslint": "^8.17.0",
-    "eslint-config-next": "^12.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "jsdom": "^19.0.0",
-    "prettier": "^2.6.2",
-    "typescript": "^4.7.3"
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.1.1"
 }
