--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@upstash/redis": "^1.16.0",
+    "@vercel/analytics": "^0.1.5",
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
     "framer-motion": "^7.6.9",
