--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "license": "MIT",
   "scripts": {
-    "lint": "eslint . --ext ts,tsx",
     "prepare": "husky install",
-    "dev": "next dev --port 4000",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "dev": "next dev --port 4000"
   },
   "dependencies": {
     "@upstash/redis": "^1.16.0",
@@ -37,7 +36,7 @@
     "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
-    "jsdom": "^19.0.0",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   },
