--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "prepare": "husky install",
     "type-check": "tsc --noEmit",
-    "dev": "next dev --port 4000"
+    "dev": "next dev --port 4000",
+    "build": "next build"
   },
   "dependencies": {
     "@upstash/redis": "^1.20.0",
@@ -16,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
