--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^10.0.1",
     "i18next": "^22.4.10",
     "leaflet": "^1.9.3",
-    "next": "^13.3.0",
+    "next": "13.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
